<resources>
    <string name="app_name">Android_Final</string>
    <string name="title_activity__tracker">Activity_Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="foodRowDescription">Food Row</string>

    <!--Tony Strings-->
    <string name="activity_textView">Welcome to the Activity Tracker</string>
    <string name="activity_Message_1">Click here to input a new activity</string>
    <string name="activity_Message_2">Click here to see past activity records</string>
    <string name="activity_Button_1">New Activity Record</string>
    <string name="activity_Button_2">Past Activities</string>
    <string name="activity_newRecordInitial">Please choose from one of the 5 activities. Enter the time spent on that activity. And add any comments you wish to make regarding your activity</string>
    <string name="activity_time">Time spent in minutes (Only numeric values):</string>
    <string name="activity_Comments">Comments:</string>
    <string name="activity_RadioButton1">Running</string>
    <string name="activity_RadioButton2">Walking</string>
    <string name="activity_RadioButton3">Biking</string>
    <string name="activity_RadioButton4">Swimming</string>
    <string name="activity_RadioButton5">Skating</string>
    <string name="activity_SubmitButton">Submit Activity</string>
    <string name="activity_menuStat1">Time per Month: </string>
    <string name="activity_menuStat2">Time this Month: </string>
    <string name="activity_menuStat3">Running Activities: </string>
    <string name="activity_menuStat4">Walking Activities: </string>
    <string name="activity_menuStat5">Biking Activities: </string>
    <string name="activity_menuStat6">Skating Activities: </string>
    <string name="activity_menuStat7">Swimming Activities: </string>
    <string name="activity_menuStat8">Total Activities: </string>
    <string name="activity_typeView">Type:</string>
    <string name="activity_timeView">Time:</string>
    <string name="activity_commentView">Comments:</string>
    <string name="activity_timeStampView">Date and Time: </string>
    <string name="activity_edit">EDIT</string>
    <string name="activity_delete">DELETE</string>
    <string name="activity_save">SAVE</string>
    <string name="activity_details1">Activity Tracker.</string>
    <string name="activity_details2">Version 1.3</string>
    <string name="activity_details3">By: Anthony Geleynse</string>
    <string name="activity_help1">Instructions for Activity Tracker."</string>
    <string name="activity_help2">To add a new Activity click on the \'New Activity\' button. You can then choose your options and save your activity. </string>
    <string name="activity_help3">If you click on the Past Activities button you can see all past activities and by clicking on them you can either edit or delete them. </string>
    <string name="activity_help4">You can see your overall statistic here on the HomePage </string>
    <string name="activity_toast1">Database entry successful</string>
    <string name="activity_toast2">Incorrect entry type. Only use numeric values for time</string>
    <string name="activity_snackbar">Successfully Added!</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Lewis Strings-->
    <string name="autoLabelTime">Time</string>
    <string name="autoLabelPrice">Price</string>
    <string name="autoLabelLitres">Litres</string>
    <string name="autoLabelMileage">Mileage</string>
    <string name="autoEntryButton">Add Entry</string>
    <string name="autoRecalculateButton">Recalculate</string>
    <string name="autoAvgGas">Average Gas for Last Month: </string>
    <string name="autoTotalLitres">Total Gas Purchased Last Month: </string>

    <string name="autoConfirmEntry">Confirm Entry</string>
    <string name="autoCancel">Cancel</string>
    <string name="autoHelpOne">Create an entry by clicking the ADD ENTRY button. </string>
    <string name="autoHelpTwo">Total litres and the average gas price for the last month is displayed at the bottom the screen. </string>
    <string name="autoHelpThree">After adding a new entry averages and totals are automatically recalculated. </string>
    <string name="autoHelpFour">Items except for the time the data was entered can be edited by clicking on an item in the table</string>
    <string name="autoRecalculateSnack">Recalculating Reports...</string>
    <string name="autoAbout">Activity 4(Automobile) v1.0 was created by Lewis Rannells</string>


    <!--Johnny Strings-->

       <string name="foodActivityTitle">Food Tracker</string>
    <string name="foodActivityAddButton">Add</string>
    <string name="foodActivityCancelButton">Cancel</string>
    <string name="foodActivityAddGreetingMsg">What did you eat, my friend?</string>
    <string name="foodActivityAddSuccessMsg">Got it</string>
    <string name="foodActivityLabelYT">Yesterday\'s Calories: </string>
    <string name="foodActivityLabelEA">Everyday Calories AVG: </string>
    <string name="foodActivityLabelTT">Today\'s Total: </string>

    <string name="foodFragmentDate">Date  </string>
    <string name="foodFragmentName">Name  </string>
    <string name="foodFragmentCalorie">Calorie  </string>
    <string name="foodFragmentFat">Fat  </string>
    <string name="foodFragmentCarbohydrate">Carbohydrate  </string>
    <string name="foodFragmentDeleteButton">Delete Item</string>
    <string name="foodFragmentEditButton">Edit Item</string>

    <string name="foodItemRowCal">Cal:</string>
    <string name="foodItemRowFat">Fat:</string>
    <string name="foodItemRowCar">Car:</string>

    <string name="foodInputFood">Food</string>
    <string name="foodInputCalorie">Calories (g)</string>
    <string name="foodInputFat">Fat (g)</string>
    <string name="foodInputCarbohydrate">Carbohydrate (g)</string>


    <string name="foodSnackMsg">A doctor a day. Keep the apple away.</string>
    <string name="foodToolbarAuthor">Author</string>
    <string name="foodToolbarHelp">Help</string>
    <string name="foodToolbarAuthorMsg">Activity 2(Food Tracker) created by Hsing-Cheng (Johnny) Chou</string>

    <string name="foodOKButton">OK</string>
    <string name="foodToolbarInstructionMsg1">Welcome to Nutrition Tracker!</string>
    <string name="foodToolbarInstructionMsg2">Press Add to add food item. Please leave no blanks.</string>
    <string name="foodToolbarInstructionMsg3">Click on the item to Delete, Edit, and Show Image!</string>
    <string name="foodToolbarInstructionMsg4">Every Add, Delete, Edit event will update the statistics numbers</string>

   <!--Cameron's Strings-->
    <string name="thermoString1">Instructions for House Thermostat.</string>
    <string name="thermoString2">To add a new schedule for the thermostat, click on the plus sign on the toolbar. </string>
    <string name="thermoString3">You can edit existing schedules by clicking on them. </string>
    <string name="thermoString4">You may also save new schedules directly from existing ones. </string>
    <string name="thermostatTitle">House Thermostat</string>
    <string name="thermostatVersion">Version 2.6.1</string>
    <string name="thermostatCreator">By: Cameron OConnor</string>
    <string name="thermosaveText">Save</string>
    <string name="thermoday_prompt">Choose a day</string>
    <string name="thermotemp_prompt">Temperature</string>
    <string name="thermotemp_text">Temperature: </string>
    <string name="thermotemp_text_celcius">Celcius</string>
    <string name="thermoday_text">Day of the week: </string>
    <string name="thermobutton_delete">Delete</string>
    <string name="thermobutton_new_save_Text">Save as new schedule</string>
    <string name="thermobutton_save">Save</string>
    <string name="thermobutton_schedule">Save Schedule</string>
    <string name="thermoDate">Date:</string>
    <string name="thermobutton_Cancel">Cancel</string>
    <string name="thermoSuccess">Successfully added!</string>
    <string name="thermoCreatortext">Creator</string>
    <string name="thermoInstructionstext">Instructions</string>
    <string name="thermoAddtext">Add</string>
    <string name="thermoActivitytext">Activity Activity</string>
    <string name="thermoFoodtext">Food Activity</string>
    <string name="thermoAutotext">Auto Activity</string>
    <string-array name="thermoday_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


</resources>
