<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/about"
        android:title="@string/thermoCreatortext"
        android:orderInCategory="101"
        app:showAsAction="never" />

    <item android:id="@+id/instructions"
        android:title="@string/thermoInstructionstext"
        android:orderInCategory="102"
        app:showAsAction="never" />

    <item android:id="@+id/add"
        android:title="@string/thermoAddtext"
        android:orderInCategory="103"
        android:icon="@drawable/plus"
        app:showAsAction="always" />

    <item android:id="@+id/ActivityAct"
        android:title="@string/thermoActivitytext"
        android:orderInCategory="104"
        app:showAsAction="never" />

    <item android:id="@+id/FoodAct"
        android:title="@string/thermoFoodtext"
        android:orderInCategory="105"
        app:showAsAction="never" />

    <item android:id="@+id/AutoAct"
        android:title="@string/thermoAutotext"
        android:orderInCategory="106"
        app:showAsAction="never" />

</menu>