<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/appToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>


    <TextView
        android:id="@+id/activity_Message_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appToolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/activity_Message_1" />


    <TextView
        android:id="@+id/activity_Message_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_Button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/activity_Message_2" />


    <Button
        android:id="@+id/activity_Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_Message_1"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_Button_1" />

    <Button
        android:id="@+id/activity_Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_Message_2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:text="@string/activity_Button_2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/activity_Button2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/timestatDesc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_menuStat1" />

            <TextView
                android:id="@+id/timestat1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/timestatDesc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_menuStat2" />

            <TextView
                android:id="@+id/timestat2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/statDesc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_menuStat3" />

            <TextView
                android:id="@+id/stat1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/statDesc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_menuStat4"
                />

            <TextView
                android:id="@+id/stat2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/statDesc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_menuStat5" />

            <TextView
                android:id="@+id/stat3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/statDesc4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_menuStat6" />

            <TextView
                android:id="@+id/stat4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/statDesc5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_menuStat7" />

            <TextView
                android:id="@+id/stat5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/statDesc6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_menuStat8" />

            <TextView
                android:id="@+id/stat6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>