<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#DDFFDD">

            <TextView
                android:id="@+id/fragFoodDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodFragmentDate"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/fragFoodNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragFoodDateLabel"
                android:text="@string/foodFragmentName"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/fragFoodCalorieLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragFoodNameLabel"
                android:text="@string/foodInputCalorie"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/fragFoodFatLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragFoodCalorieLabel"
                android:text="@string/foodInputFat"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/fragFoodCarbohydrateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragFoodFatLabel"
                android:text="@string/foodInputCarbohydrate"
                android:textSize="20dp" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#DDFFDD">

            <TextView
                android:id="@+id/fragFoodDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodFragmentDate"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/fragFoodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragFoodDate"
                android:text="@string/foodFragmentName"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/fragFoodCalorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragFoodName"
                android:text="@string/foodInputCalorie"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/fragFoodFat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragFoodCalorie"
                android:text="@string/foodInputFat"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/fragFoodCarbohydrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragFoodFat"
                android:text="@string/foodInputCarbohydrate"
                android:textSize="20dp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#DDFFDD">

        <Button
            android:id="@+id/foodFragDeleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:text="@string/foodFragmentDeleteButton" />

        <Button
            android:id="@+id/foodFragEditButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:text="@string/foodFragmentEditButton" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:visibility="invisible"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/currentFood"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />


</LinearLayout>