<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--<Spinner-->
        <!--android:id="@+id/foodTypeSpinner"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@android:drawable/btn_dropdown"-->
        <!--android:scaleType="center"-->
        <!--android:spinnerMode="dropdown" />-->

    <EditText
        android:id="@+id/foodEditText"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/foodInputFood" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/foodEditText">

        <EditText
            android:id="@+id/calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:textSize="12dp"
            android:layout_weight="1"
            android:hint="@string/foodInputCalorie"
            android:inputType="number" />

        <EditText
            android:id="@+id/fat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="8dp"
            android:textSize="12dp"
            android:layout_weight="1"
            android:hint="@string/foodInputFat"
            android:inputType="number" />

        <EditText
            android:id="@+id/carbohydrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:textSize="12dp"
            android:hint="@string/foodInputCarbohydrate"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/pickerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:layout_weight="1"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:layout_weight="1"
        android:timePickerMode="spinner" />
    </LinearLayout>

</LinearLayout>